--- a/about.html
+++ b/about.html
@@ -241,16 +241,17 @@
           <div class="col-lg-12 text-center">
             
             <h2><strong style="color: red";>About Us</strong></h2>
-            <p> <b>Balcure Pharmaceuticals Limited</b> is a leading Kenyan based pharmaceutical Company specialized
-              in Import, Distribution and Export of human medicine. We are committed to upholding to the
-              principle of Good Distribution Practices (GDP)
-              We are expert in Sourcing, Storage, Supplying and Distributing patented pharmaceuticals licensed
-              products in Kenya and East Africa. As an established and well reputed Organization, we have built up
-              an enviable customer base that include pharmacies, hospitals and the healthcare opinion leaders.
-              We take pride as an accredited supplier to both the Public and Private healthcare Institutions,
-              Pharmaceutical Wholesalers and NGOs in East Africa and we are keen to work with our partners at
-              the highest level of customer satisfaction and our team fully understand the critical factor needed to
-              be considered a serious player in the Sector.</p>
+            <p> <b>Union Pharma Tanzania Limited is a leading Tanzanian based Pharmaceutical
+              Company specialized in Import, Distribution and Export of Human medicines. We 
+              are committed to upholding to the principle of Good Distribution Practices (GDP) 
+              We are experts in sourcing, storage, supplying and distributing pharmaceutical 
+              licensed products in Tanzania, East Africa and the Southern African Community (SADC).
+              As an established and well reputed Organization, we have built up an enviable customer
+              base that include pharmacies, hospitals and healthcare opinion leaders. We take pride
+              as an accredited supplier to both the Public and Private healthcare Institutions, 
+              Pharmaceutical Wholesalers and NGOs and we are keen to work with our partners at 
+              the highest level of customer satisfaction and our team fully 
+              understand the critical factors needed to be considered a serious player in the sector.</p>
             
           </div>
         </div>
@@ -357,7 +358,7 @@
           <div class="col-md-12">
             <p>
               Copyright &copy;
-              <script>document.write(new Date().getFullYear());</script> Balcure Pharmaceuticals Limited
+              <script>document.write(new Date().getFullYear());</script> Union Pharma Tanzania Limited
             </p>
           </div>
 
